styles.css
html, body {
    margin: 0;
    height: 100%;
}
.page-wrapper{
    position: relative;
    height: 100%;
}
.header{
    display: flex;
    width: 100%;
    justify-content:space-between;
    align-items: center; 
    background-color: white;
}
#nav-bar{
}
.header img{
    height: 125px;
}
.links{
    display: flex;
    gap: 70px;
}
.body{
    height: 100%;
}

